--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -27,7 +27,7 @@
             <div class="d-flex col">
                 <div id="question-number" class="col-1 d-flex justify-content-end me-3">
                     <span style="display: none">0</span>
-                    <span>설문조사 정보</span>
+                    <span>정보입력</span>
                     <span>-></span>
                 </div>
 
