fix new sidebar item save action error when click other list

--- a/src/main/resources/templates/pages/research/createform.html
+++ b/src/main/resources/templates/pages/research/createform.html
@@ -27,7 +27,7 @@
             <div class="d-flex col">
                 <div id="question-number" class="col-1 d-flex justify-content-end me-3">
                     <span style="display: none">0</span>
-                    <span>정보입력</span>
+                    <span class="text-white">정보입력</span>
                     <span>-></span>
                 </div>
 
@@ -40,7 +40,7 @@
                         <div class="col-6">
                             <div class="d-flex justify-content-between">
                                 <div class="col-4">
-                                    <span>시작일</span>
+                                    <span class="text-white">시작일</span>
                                 </div>
                                 <div class="col-8">
                                     <input type="date">
@@ -50,7 +50,7 @@
                         <div class="col-6">
                             <div class="d-flex justify-content-between">
                                 <div class="col-4">
-                                    <span>종료일</span>
+                                    <span class="text-white">종료일</span>
                                 </div>
                                 <div class="col-8">
                                     <input type="date">
@@ -58,11 +58,7 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
-
-
             </div>
         </div>
 
